-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.15, 10.2.17, 10.3.6
-
Component/s: Backup, Storage Engine - InnoDB
-
Labels:None
The following commands can able to repeat the scenario:
./mtr gcol.gcol_update gcol.innodb_virtual_fk gcol.innodb_virtual_rebuild innodb.log_file_name_debug --mem --big-test --no-reorder
|
It fails with the following stack trace:
|
#6 0x00007ff0a36a7bd7 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x5598cd18bccb "!page || page_type == 2", file=file@entry=0x5598cd18ae40 "/home/thiru/mariarepo/dev-14398/10.2/storage/innobase/log/log0recv.cc", line=line@entry=1519, function=function@entry=0x5598cd18e720 <recv_parse_or_apply_log_rec_body(mlog_id_t, unsigned char*, unsigned char*, unsigned long, unsigned long, bool, buf_block_t*, mtr_t*)::__PRETTY_FUNCTION__> "byte* recv_parse_or_apply_log_rec_body(mlog_id_t, byte*, byte*, ulint, ulint, bool, buf_block_t*, mtr_t*)") at assert.c:92
|
#7 0x00007ff0a36a7c82 in __GI___assert_fail (assertion=0x5598cd18bccb "!page || page_type == 2", file=0x5598cd18ae40 "/home/thiru/mariarepo/dev-14398/10.2/storage/innobase/log/log0recv.cc", line=1519, function=0x5598cd18e720 <recv_parse_or_apply_log_rec_body(mlog_id_t, unsigned char*, unsigned char*, unsigned long, unsigned long, bool, buf_block_t*, mtr_t*)::__PRETTY_FUNCTION__> "byte* recv_parse_or_apply_log_rec_body(mlog_id_t, byte*, byte*, ulint, ulint, bool, buf_block_t*, mtr_t*)") at assert.c:101
|
#8 0x00005598ccbbb784 in recv_parse_or_apply_log_rec_body (type=MLOG_UNDO_HDR_CREATE, ptr=0x7ff09cfc92f8 "", end_ptr=0x7ff09cfc92fd "", space_id=0, page_no=511, apply=true, block=0x7ff09cdc87f0, mtr=0x7ffdf9f38d90) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/log/log0recv.cc:1519
|
#9 0x00005598ccbbcb59 in recv_recover_page (just_read_in=true, block=0x7ff09cdc87f0) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/log/log0recv.cc:1964
|
#10 0x00005598ccd98b27 in buf_page_io_complete (bpage=0x7ff09cdc87f0, dblwr=false, evict=false) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/buf/buf0buf.cc:6194
|
#11 0x00005598ccdbddda in buf_read_page_low (err=0x7ffdf9f39764, sync=true, type=0, mode=132, page_id=..., page_size=..., unzip=false, ignore_missing_space=false) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/buf/buf0rea.cc:225
|
#12 0x00005598ccdbe765 in buf_read_page (page_id=..., page_size=...) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/buf/buf0rea.cc:460
|
#13 0x00005598ccd93a6e in buf_page_get_gen (page_id=..., page_size=..., rw_latch=2, guess=0x0, mode=10, file=0x5598cd216b80 "/home/thiru/mariarepo/dev-14398/10.2/storage/innobase/include/trx0undo.ic", line=164, mtr=0x7ffdf9f39d50, err=0x0) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/buf/buf0buf.cc:4468
|
#14 0x00005598ccd29771 in trx_undo_page_get (page_id=..., mtr=0x7ffdf9f39d50) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/include/trx0undo.ic:163
|
#15 0x00005598ccd2be4d in trx_undo_mem_create_at_db_start (rseg=0x5598cfd83400, id=1, page_no=511, mtr=0x7ffdf9f39d50) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/trx/trx0undo.cc:1148
|
#16 0x00005598ccd2c52b in trx_undo_lists_init (rseg=0x5598cfd83400) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/trx/trx0undo.cc:1273
|
#17 0x00005598ccd12e05 in trx_rseg_mem_restore (rseg=0x5598cfd83400, mtr=0x7ffdf9f3a330) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/trx/trx0rseg.cc:198
|
#18 0x00005598ccd13188 in trx_rseg_array_init () at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/trx/trx0rseg.cc:258
|
#19 0x00005598ccd1bd31 in trx_lists_init_at_db_start () at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/trx/trx0trx.cc:915
|
#20 0x00005598ccd1640c in trx_sys_init_at_db_start () at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/trx/trx0sys.cc:504
|
#21 0x00005598cccd3ed3 in innobase_start_or_create_for_mysql () at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/srv/srv0start.cc:2252
|
#22 0x00005598ccb1a266 in innobase_init (p=0x5598cf600250) at /home/thiru/mariarepo/dev-14398/10.2/storage/innobase/handler/ha_innodb.cc:4360
|
#23 0x00005598cc791bf9 in ha_initialize_handlerton (plugin=0x5598cf5ccd90) at /home/thiru/mariarepo/dev-14398/10.2/sql/handler.cc:521
|
#24 0x00005598cc533742 in plugin_initialize (tmp_root=0x7ffdf9f438e0, plugin=0x5598cf5ccd90, argc=0x5598cdb11868 <remaining_argc>, argv=0x5598cf484140, options_only=false) at /home/thiru/mariarepo/dev-14398/10.2/sql/sql_plugin.cc:1416
|
#25 0x00005598cc53436f in plugin_init (argc=0x5598cdb11868 <remaining_argc>, argv=0x5598cf484140, flags=2) at /home/thiru/mariarepo/dev-14398/10.2/sql/sql_plugin.cc:1697
|
#26 0x00005598cc43c487 in init_server_components () at /home/thiru/mariarepo/dev-14398/10.2/sql/mysqld.cc:5285
|
#27 0x00005598cc43d564 in mysqld_main (argc=147, argv=0x5598cf484140) at /home/thiru/mariarepo/dev-14398/10.2/sql/mysqld.cc:5881
|
#28 0x00005598cc432550 in main (argc=25, argv=0x7ffdf9f44678) at /home/thiru/mariarepo/dev-14398/10.2/sql/main.cc:25
|
|
- is caused by
-
MDEV-15325 Incomplete validation of missing tablespace during recovery
-
- Closed
-